@startuml
hide circle
hide methods

class User {
  +firstName
  +lastName
  +email
  +phone
  +birthDate
  +active
}

class Team {
  +name
  +shortName
  +city
}

class Squad {
  +name
}

class League {
  +name
  +season
  +category
}

class Venue {
  +name
  +city
  +address
  +capacity
}

class TeamEvent {
  +title
  +type
  +startDate
  +endDate
}

class EventParticipation {
  +status
}

class SquadMembership {
  +role
  +active
}

class Comment {
  +content
}

class Announcement {
  +title
  +content
  +visibility
  +pinned
}

class Payment {
  +amount
  +dueDate
  +status
  +type
}

User -[hidden]right- Squad
Squad -[hidden]right- TeamEvent
TeamEvent -[hidden]down- Comment
Comment -[hidden]left- Announcement
Announcement -[hidden]left- Payment
League -[hidden]up- Squad
Team -[hidden]left- Venue

Team "1" -- "0..*" Squad : contains
League "1" -- "0..*" Squad : organizes
Venue "1" -- "0..*" Team : is used by

User "0..*" -- "0..*" Squad : membership
(User, Squad) .. SquadMembership

Squad "0..*" -- "0..*" TeamEvent : participates in
Venue "0..1" -- "0..*" TeamEvent : hosts
User "1" -- "0..*" TeamEvent : creates

User "0..*" -- "0..*" TeamEvent : responds to attendance
(User, TeamEvent) .. EventParticipation

User "1" -- "0..*" Comment : writes
TeamEvent "1" -- "0..*" Comment : contains

User "1" -- "0..*" Announcement : publishes
User "1" -- "0..*" Payment : is assigned

@enduml
